[package]
name = "itproce-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
diesel = { version = "2.1.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
#futures = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.107"

